src/test/ui/consts/const-eval/const_fn_ptr_fail2.stderr
warning: skipping const checks
  --> $DIR/const_fn_ptr_fail2.rs:9:5
   |
LL |     x(y)
   |     ^^^^

error[E0080]: evaluation of constant expression failed
  --> $DIR/const_fn_ptr_fail2.rs:16:5
   |
LL |     assert_eq!(Y, 4);
   |     ^^^^^^^^^^^-^^^^^
   |                |
   |                referenced constant has errors
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0080]: evaluation of constant expression failed
  --> $DIR/const_fn_ptr_fail2.rs:18:5
   |
LL |     assert_eq!(Z, 4);
   |     ^^^^^^^^^^^-^^^^^
   |                |
   |                referenced constant has errors
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
